# docs/swagger.yaml
@@ -38,6 +38,8 @@ definitions:
     type: object
   dto.ServerResponse:
     properties:
+      id:
+        type: integer
       interval_time:
         type: integer
       ipv4:
@@ -96,7 +98,7 @@ definitions:
       message:
         type: string
     type: object
-host: localhost
+host: server.localhost
 info:
   contact:
     email: support@swagger.io
@@ -109,7 +111,7 @@ info:
   title: Server Management Service
   version: "1.0"
 paths:
-  /api/v1/server:
+  /server:
     get:
       consumes:
       - application/json
@@ -199,7 +201,7 @@ paths:
       summary: Create a new server
       tags:
       - server
-  /api/v1/server/{id}:
+  /server/{id}:
     delete:
       consumes:
       - application/json
@@ -283,7 +285,7 @@ paths:
       summary: Update server
       tags:
       - server
-  /api/v1/server/export:
+  /server/export:
     get:
       consumes:
       - application/json
@@ -337,7 +339,7 @@ paths:
       summary: Export servers to Excel file
       tags:
       - servers
-  /api/v1/server/import:
+  /server/import:
     post:
       consumes:
       - multipart/form-data
